[JSC] Crash on JSC::Wasm::wasmToJS(unsigned long, unsigned int) https://bugs.webkit.org/show_bug.cgi?id=285205 rdar://142111335

Reviewed by Justin Michaud.

We should validate functions / exceptions signature when parsing types.

* JSTests/wasm/stress/validate-function-signature-in-section-parser.js: Added.
* Source/JavaScriptCore/wasm/WasmFunctionParser.h:
(JSC::Wasm::FunctionParser<Context>::parseExpression):
(JSC::Wasm::FunctionParser<Context>::parseUnreachableExpression):
* Source/JavaScriptCore/wasm/WasmSectionParser.cpp:
(JSC::Wasm::SectionParser::parseImport):
(JSC::Wasm::SectionParser::parseFunction):

Canonical link: https://commits.webkit.org/288718@main