Source/JavaScriptCore/wasm/WasmFunctionParser.h
@@ -3373,7 +3373,6 @@ FOR_EACH_WASM_MEMORY_STORE_OP(CREATE_CASE)
         WASM_FAIL_IF_HELPER_FAILS(parseExceptionIndex(exceptionIndex));
         TypeIndex typeIndex = m_info.typeIndexFromExceptionIndexSpace(exceptionIndex);
         const TypeDefinition& signature = TypeInformation::get(typeIndex).expand();
-        WASM_VALIDATOR_FAIL_IF(!signature.is<FunctionSignature>(), "invalid type index (not a function signature) for catch, got ", exceptionIndex);
         const auto& exceptionSignature = *signature.as<FunctionSignature>();
 
         ControlEntry& controlEntry = m_controlStack.last();
@@ -3447,7 +3446,6 @@ FOR_EACH_WASM_MEMORY_STORE_OP(CREATE_CASE)
                 WASM_PARSER_FAIL_IF(!parseExceptionIndex(exceptionTag), "can't read tag of try_table catch at index "_s, i);
                 TypeIndex typeIndex = m_info.typeIndexFromExceptionIndexSpace(exceptionTag);
                 const TypeDefinition& specifiedSignature = TypeInformation::get(typeIndex).expand();
-                WASM_VALIDATOR_FAIL_IF(!specifiedSignature.is<FunctionSignature>(), "invalid type index (not a function signature) for try_table, got ", exceptionTag);
                 const auto& exceptionSignature = *specifiedSignature.as<FunctionSignature>();
 
                 signature = &specifiedSignature;
@@ -3530,7 +3528,6 @@ FOR_EACH_WASM_MEMORY_STORE_OP(CREATE_CASE)
         WASM_FAIL_IF_HELPER_FAILS(parseExceptionIndex(exceptionIndex));
         TypeIndex typeIndex = m_info.typeIndexFromExceptionIndexSpace(exceptionIndex);
         const TypeDefinition& signature = TypeInformation::get(typeIndex).expand();
-        WASM_VALIDATOR_FAIL_IF(!signature.is<FunctionSignature>(), "invalid type index (not a function signature) for throw, got ", exceptionIndex);
         const auto& exceptionSignature = *signature.as<FunctionSignature>();
 
         WASM_VALIDATOR_FAIL_IF(m_expressionStack.size() < exceptionSignature.argumentCount(), "Too few arguments on stack for the exception being thrown. The exception expects ", exceptionSignature.argumentCount(), ", but only ", m_expressionStack.size(), " were present. Exception has signature: ", exceptionSignature.toString());
@@ -3776,7 +3773,6 @@ auto FunctionParser<Context>::parseUnreachableExpression() -> PartialResult
         WASM_FAIL_IF_HELPER_FAILS(parseExceptionIndex(exceptionIndex));
         TypeIndex typeIndex = m_info.typeIndexFromExceptionIndexSpace(exceptionIndex);
         const TypeDefinition& signature = TypeInformation::get(typeIndex).expand();
-        WASM_VALIDATOR_FAIL_IF(!signature.is<FunctionSignature>(), "invalid type index (not a function signature) for catch, got ", exceptionIndex);
         const auto& exceptionSignature = *signature.as<FunctionSignature>();
 
         if (m_unreachableBlocks > 1)
